--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
               href="https://www.instagram.com/ninacarducci.photo/?hl=fr"
               target="_blank"
             >
-              <img src="assets/images/instagram.png" />
+              <img src="assets/images/instagram.png" alt="Instagram de Nina Carducci"/>
             </a>
           </li>
         </ul>
@@ -55,16 +55,19 @@
               data-bs-target="#carouselExampleIndicators"
               data-bs-slide-to="0"
               class="active"
+              aria-label="Slide 1"
             ></button>
             <button
               type="button"
               data-bs-target="#carouselExampleIndicators"
               data-bs-slide-to="1"
+              aria-label="Slide 2"
             ></button>
             <button
               type="button"
               data-bs-target="#carouselExampleIndicators"
               data-bs-slide-to="2"
+              aria-label="Slide 3"
             ></button>
           </div>
           <div class="carousel-inner">
@@ -72,18 +75,21 @@
               <img
                 src="./assets/images/slider/ryoji-iwata-wuzjnov7t0g-unsplash.webp"
                 class="d-block w-100"
+                alt="Paysage urbain par Ryoji Iwata"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="./assets/images/slider/nicholas-green-npz8akkumdi-unsplash.webp"
                 class="d-block w-100"
+                alt="Paysage naturel par Nicholas Green"
               />
             </div>
             <div class="carousel-item">
               <img
                 src="./assets/images/slider/edward-cisneros-3-h6-1npdgw-unsplash.webp"
                 class="d-block w-100"
+                alt="Portrait par Edward Cisneros"
               />
             </div>
           </div>
@@ -110,7 +116,7 @@
 
       <section id="about">
         <div class="picture left">
-          <img src="./assets/images/nina.webp" />
+          <img src="./assets/images/nina.webp" alt="Portrait de Nina Carducci"/>
         </div>
         <article id="about-me">
           <h2 class="about-me__title">À propos de moi</h2>
@@ -142,46 +148,55 @@
               data-gallery-tag="Concert"
               class="gallery-item"
               src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+              alt="Concert photographié par Aaron Paul"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+              alt="Photo d'entreprise par Ali Morshedlou"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+              alt="Photo d'entreprise par Jason Goodman"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
               src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+              alt="Photo de mariage par Hannah Busing"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
               src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+              alt="Portrait par Ade Tunji"
             />
             <img
               data-gallery-tag="Mariages"
               class="gallery-item"
               src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+              alt="Photo de mariage par Jakob Owens"
             />
             <img
               data-gallery-tag="Portrait"
               class="gallery-item"
               src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.webp"
+              alt="Portrait par Nino Van Prattenburg"
             />
             <img
               data-gallery-tag="Concert"
               class="gallery-item"
               src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+              alt="Concert photographié par Austin Neill"
             />
             <img
               data-gallery-tag="Entreprises"
               class="gallery-item"
               src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+              alt="Photo d'entreprise par Mateus Campos Felipe"
             />
           </div>
         </div>
@@ -284,7 +299,7 @@
           </form>
         </div>
         <div class="picture right">
-          <img src="./assets/images/camera.webp" />
+          <img src="./assets/images/camera.webp" alt="Appareil photo"/>
         </div>
       </div>
     </footer>
