--- a/index.html
+++ b/index.html
@@ -20,6 +20,60 @@
     ></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
+
+    <!-- Rich Snippet pour Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Nina Carducci",
+        "url": "https://shougm77.github.io/Nina-Carducci/",
+        "logo": "https://shougm77.github.io/Nina-Carducci/assets/images/nina.webp",
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+33-5-56-67-78-89",
+          "contactType": "Service clientèle",
+          "areaServed": "FR",
+          "availableLanguage": "French",
+          "hoursAvailable": {
+            "@type": "OpeningHoursSpecification",
+            "dayOfWeek": [
+              "Monday",
+              "Tuesday",
+              "Wednesday",
+              "Thursday",
+              "Friday"
+            ],
+            "opens": "10:00",
+            "closes": "19:00"
+          }
+        },
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "68 avenue Alsace-Lorraine",
+          "addressLocality": "Bordeaux",
+          "postalCode": "33200",
+          "addressCountry": "FR"
+        }
+      }
+    </script>
+    
+      <!-- Balises OpenGraph pour Facebook -->
+    <meta property="og:title" content="Nina Carducci">
+    <meta property="og:description" content="Découvrez les services offerts par Nina Carducci à Bordeaux.">
+    <meta property="og:url" content="https://shougm77.github.io/Nina-Carducci/">
+    <meta property="og:image" content="https://shougm77.github.io/Nina-Carducci/assets/images/nina.webp">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="Nina Carducci">
+
+    <!-- Twitter Cards -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Nina Carducci">
+    <meta name="twitter:description" content="Découvrez les services offerts par Nina Carducci à Bordeaux.">
+    <meta name="twitter:url" content="https://shougm77.github.io/Nina-Carducci/">
+    <meta name="twitter:image" content="https://shougm77.github.io/Nina-Carducci/assets/images/nina.webp">
+
+
   </head>
   <body>
     <header class="top-header">
