--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
 
-    <!-- Rich Snippet pour Google -->
+    <!-- Shema.org -->
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
@@ -31,18 +31,18 @@
         "logo": "https://shougm77.github.io/Nina-Carducci/assets/images/nina.webp",
         "contactPoint": {
           "@type": "ContactPoint",
-          "telephone": "+33-5-56-67-78-89",
+          "telephone": "05 56 67 78 89",
           "contactType": "Service clientèle",
           "areaServed": "FR",
           "availableLanguage": "French",
           "hoursAvailable": {
             "@type": "OpeningHoursSpecification",
             "dayOfWeek": [
-              "Monday",
-              "Tuesday",
-              "Wednesday",
-              "Thursday",
-              "Friday"
+              "Lundi",
+              "Mardi",
+              "Mercredi",
+              "Jeudi",
+              "Vendredi"
             ],
             "opens": "10:00",
             "closes": "19:00"
@@ -57,8 +57,8 @@
         }
       }
     </script>
-    
-      <!-- Balises OpenGraph pour Facebook -->
+
+      <!-- Facebook -->
     <meta property="og:title" content="Nina Carducci">
     <meta property="og:description" content="Découvrez les services offerts par Nina Carducci à Bordeaux.">
     <meta property="og:url" content="https://shougm77.github.io/Nina-Carducci/">
@@ -66,7 +66,7 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Nina Carducci">
 
-    <!-- Twitter Cards -->
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Nina Carducci">
     <meta name="twitter:description" content="Découvrez les services offerts par Nina Carducci à Bordeaux.">
