--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     ></script>
     <script src="./assets/maugallery.js"></script>
     <script src="./assets/scripts.js"></script>
+    <!-- description -->
+
+    <meta name="description" content="Découvrez les services offerts par Nina Carducci à Bordeaux. Spécialisée en portraits et événementiel, je capture vos moments précieux avec passion et créativité." />
 
     <!-- Shema.org -->
     <script type="application/ld+json">
