--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
-        "@type": "Photographer",
+        "@type": "Organization",
         "name": "Nina Carducci",
         "url": "https://shougm77.github.io/Nina-Carducci/",
         "logo": "https://shougm77.github.io/Nina-Carducci/assets/images/nina.webp",
