--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
       integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/maugallery.js"></script>
-    <script src="./assets/scripts.js"></script>
+    <script defer src="./assets/maugallery.js"></script>
+    <script defer src="./assets/scripts.js"></script>
     <!-- description -->
 
     <meta name="description" content="Découvrez les services offerts par Nina Carducci à Bordeaux. Spécialisée en portraits et événementiel, je capture vos moments précieux avec passion et créativité." />
